<resources>
    <string name="app_name">Mattroute</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mattrote App</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- <string name="action_settings">Settings</string> -->

    <string name="mattroute_home">Home</string>
    <!-- <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string> -->
    <string name="hint_search_route_">Search Route</string>
    <string name="sacco">Sacco</string>
    <string name="current_fare">Current Fare</string>
    <string name="stage_location">Stage Location</string>
    <string name="mattroute_settings">Settings</string>
    <string name="mattroute_feedback"> Your Feedback</string>
    <string name="mattroute_share_app">Share App</string>
    <string name="mattroute_exit_app">Exit App</string>
    <string name="mattroute_about">About</string>
    <string name="mattroute_communicate">Communicate</string>
    <string name="nav_header_subtitle">by Amos Kibet</string>
    <string name="ngara_see_map">Ngara, see Map</string>
    <string name="bazaar_see_map">Bazaar, see Map</string>
    <string name="odeon_see_map">Odeon, see Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
